--- a/doze/AndroidManifest.xml
+++ b/doze/AndroidManifest.xml
@@ -32,7 +32,7 @@
         <activity
             android:name=".DozeSettings"
             android:label="@string/ambient_display_title"
-            android:theme="@android:style/Theme.Material.Settings">
+            android:theme="@style/DozeTheme">
             <intent-filter>
                 <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
             </intent-filter>
